# ballistics6DOF

./: .gitignore  CMakeLists.txt  README.md
configs/: 300_winmag.cfg  308_long_range.cfg  308_windy.cfg  338_lapua.cfg  45acp.cfg  50bmg.cfg  556_nato.cfg  6.5_creedmoor.cfg  762_soviet.cfg  9mm_pistol.cfg  default.cfg  howitzer_105mm.cfg  mortar_81mm.cfg
include/: aero.hpp  atmosphere.hpp  constants.hpp  flight_record.hpp  projectile.hpp  report.hpp  solver.hpp  state.hpp
plot/: animate_3d.py  generate_demo.py  plot_trajectory.py
src/: aero.cpp  atmosphere.cpp  main.cpp  projectile.cpp  report.cpp  solver.cpp
